impplemented new api actions